# relay

./: .env  .gitignore  Cargo.toml  Dockerfile  build.rs  config.toml  public.key
proto/: desktop.proto  device.proto
src/: api.rs  main.rs  model.rs
src/biz/: store.rs
src/component/: config.rs  device_id.rs  mod.rs  online.rs  store.rs
src/handler/: desktop_connect_ask.rs  desktop_connect_ask_auth.rs  desktop_connect_offer.rs  desktop_connect_offer_auth.rs  desktop_connect_open_stream.rs  device_goes_online.rs  handshake.rs  heart_beat.rs  heartbeat.rs  mod.rs
src/instance/: client_manager.rs
src/network/: client.rs  message.rs  mod.rs  packet.rs  server.rs  server_to_client.rs  shutdown.rs
src/network/handler/: heart_beat.rs
src/network/proto/: msg_login.rs
src/service/: desktop.rs  desktop_connect_ask.rs  desktop_connect_offer.rs  desktop_connect_offer_auth.rs  device.rs  mod.rs  proxy.rs
src/service/message/: reply.rs  reply_error.rs  request.rs
src/session/: manager.rs  mod.rs  session.rs
src/test/: bincode_test.rs  mod.rs
