[package]
name = "endpoints"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
chrono = "0.4.22"
tokio = { version = "1.21.1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
bincode = "1.3.3"
bytes = "1.2.1"
futures = "0.3.24"
anyhow = "1.0.65"
rand = "0.8.5"
dashmap = "5.4.0"
once_cell = "1.14.0"
toml = "0.5.9"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
dotenvy = "0.15.3"
