[package]
name = "endpoints"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.148", features = ["derive"] }
chrono = "0.4.23"
tokio = { version = "1.22.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
bincode = "1.3.3"
bytes = "1.3.0"
futures = "0.3.25"
anyhow = "1.0.66"
rand = "0.8.5"
dashmap = "5.4.0"
once_cell = "1.16.0"
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
dotenvy = "0.15.6"
