[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_bytes = "0.11.8"
chrono = "0.4.23"
tokio = { version = "1.24.1", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["full"] }
bincode = "1.3.3"
bytes = "1.3.0"
futures = "0.3.25"
anyhow = "1.0.68"
rand = "0.8.5"
dashmap = "5.4.0"
once_cell = "1.17.0"
toml = "0.5.10"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
dotenvy = "0.15.6"
axum = "0.6.2"
tokio-cron-scheduler = "0.8.3"
